simple-webapp-php/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-webapp-php-service
  namespace: redhat-ocp-demo
spec:
  selector:
    app: simple-webapp-php
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
